fixed layout jumping

--- a/src/_includes/components/css/tree-finder.css
+++ b/src/_includes/components/css/tree-finder.css
@@ -1,5 +1,6 @@
 main {
   margin-top: 5rem;
+  display: block;
 }
 
 #grid-content-right {
